--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,17 +5,16 @@
     android:id="@+id/ConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.Chats.ChatListUsers" >
+    tools:context=".ChatActivity" >
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewChatsUsers"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerViewChats"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/list_chat" />
+        tools:layout="@layout/fragment_chat_list_users" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
