--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,282 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerViewLogin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".LoginActivity">
-
-        <!--            TITULO              -->
-        <TextView
-            android:id="@+id/tv_ingresar"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:textSize="64sp"
-            android:text="Ingresar"
-            android:gravity="center"
-            android:fontFamily="@font/bebasneue_regular"
-
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/tv_ingresarCorreoElectronico"
-
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="20dp"
-
-            app:layout_constraintVertical_chainStyle="packed"
-            app:layout_constraintVertical_bias="0.0"
-            />
-
-        <!--            CORREO ELECTRONICO              -->
-        <TextView
-            android:id="@+id/tv_ingresarCorreoElectronico"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="10dp"
-            android:fontFamily="@font/rubik_variablefont_wght"
-            android:gravity="start"
-
-            android:text="Ingresar correo electronico"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@id/til_IngresarCorreoElectronicoLayout"
-
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_ingresar" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/til_IngresarCorreoElectronicoLayout"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:textSize="16sp"
-            android:hint="Ingresar correo electronico"
-            android:gravity="start"
-            android:fontFamily="@font/rubik_variablefont_wght"
-
-            app:startIconDrawable="@drawable/ic_baseline_mail_24"
-            android:inputType="textEmailAddress"
-
-            app:layout_constraintTop_toBottomOf="@id/tv_ingresarCorreoElectronico"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/tv_ingresarContrasena"
-
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="5dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
-            >
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/til_IngresarCorreoElectronicoEditText"
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/rubik_variablefont_wght"
-
-                />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <!--            CONTRASENIA              -->
-        <TextView
-            android:id="@+id/tv_ingresarContrasena"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:text="Ingresar correo electronico"
-            android:fontFamily="@font/rubik_variablefont_wght"
-            android:gravity="start"
-
-            app:layout_constraintTop_toBottomOf="@id/til_IngresarCorreoElectronicoLayout"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/til_IngresarContrasenaLayout"
-
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="10dp"
-            />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/til_IngresarContrasenaLayout"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:textSize="16sp"
-            android:hint="Ingresar correo electronico"
-            android:gravity="start"
-            android:fontFamily="@font/rubik_variablefont_wght"
-
-            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
-            android:inputType="textEmailAddress"
-
-            app:layout_constraintTop_toBottomOf="@id/tv_ingresarContrasena"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/tv_olvideMiContrasena"
-
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="5dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
-            >
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/til_IngresarContrasenaEditText"
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/rubik_variablefont_wght"
-
-                />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <TextView
-            android:id="@+id/tv_olvideMiContrasena"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:text="Olvide mi contraseña"
-            android:fontFamily="@font/rubik_variablefont_wght"
-            android:gravity="start"
-
-            app:layout_constraintTop_toBottomOf="@id/til_IngresarContrasenaLayout"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/btn_ingresar"
-
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="5dp"
-            />
-
-        <!--            BOTONES              -->
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_ingresar"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:textSize="32dp"
-            android:textStyle="bold"
-            android:text="Ingresar"
-            android:fontFamily="@font/bebasneue_regular"
-            android:gravity="center"
-
-            app:layout_constraintTop_toBottomOf="@id/tv_olvideMiContrasena"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/tv_ingresarConOtros"
-
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="10dp"
-            />
-
-        <TextView
-            android:id="@+id/tv_ingresarConOtros"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:text="O ingresar con"
-            android:fontFamily="@font/rubik_variablefont_wght"
-            android:gravity="center_horizontal"
-
-            app:layout_constraintTop_toBottomOf="@id/btn_ingresar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/cl_layout"
-
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="5dp"
-            />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            app:layout_constraintTop_toBottomOf="@id/tv_ingresarConOtros"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/tv_crearUnaCuenta"
-
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="5dp"
-            >
-
-            <ImageButton
-                android:id="@+id/btn_facebook"
-
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/btn_google"
-                app:layout_constraintBottom_toBottomOf="parent"
-
-                android:background="@drawable/fb_icon_325x325"
-                android:layout_marginHorizontal="20dp"
-                />
-
-            <ImageButton
-                android:id="@+id/btn_google"
-
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/btn_facebook"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-
-                android:background="@drawable/google_logo_png_suite_everything_you_need_know_about_google_newest_0"
-                android:layout_marginHorizontal="20dp"
-                />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <TextView
-            android:id="@+id/tv_crearUnaCuenta"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:text="Crear una cuenta"
-            android:fontFamily="@font/rubik_variablefont_wght"
-            android:gravity="center_horizontal"
-
-            app:layout_constraintTop_toBottomOf="@id/cl_layout"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="5dp"
-            />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout="@layout/fragment_login01"
+        />
+</androidx.constraintlayout.widget.ConstraintLayout>
