--- a/app/src/main/res/layout/fragment_login01.xml
+++ b/app/src/main/res/layout/fragment_login01.xml
@@ -11,7 +11,7 @@ tools:context=".Fragments.Login.Login01Fragment">
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
-    <!--            TITULO              -->
+    <!--            TITULO a             -->
     <TextView
         android:id="@+id/tv_ingresar"
 
