--- a/app/src/main/res/layout/fragment_create_profile02.xml
+++ b/app/src/main/res/layout/fragment_create_profile02.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.CreateProfile.CreateProfile02Fragment">
+    tools:context=".Fragments.Registro.CreateProfile02Fragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
