--- a/app/src/main/res/layout/fragment_login01.xml
+++ b/app/src/main/res/layout/fragment_login01.xml
@@ -45,6 +45,7 @@ tools:context=".Fragments.Login.Login01Fragment">
 
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="2dp"
         android:fontFamily="@font/rubik_variablefont_wght"
         android:gravity="start"
 
@@ -76,7 +77,8 @@ tools:context=".Fragments.Login.Login01Fragment">
         app:layout_constraintBottom_toTopOf="@id/tv_ingresarContrasena"
 
         android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="5dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="10dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
         >
@@ -110,6 +112,7 @@ tools:context=".Fragments.Login.Login01Fragment">
 
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="2dp"
         />
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_IngresarContrasenaLayout"
@@ -123,7 +126,7 @@ tools:context=".Fragments.Login.Login01Fragment">
         android:fontFamily="@font/rubik_variablefont_wght"
 
         app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
-        android:inputType="textEmailAddress"
+        android:inputType="textPassword"
 
         app:layout_constraintTop_toBottomOf="@id/tv_ingresarContrasena"
         app:layout_constraintStart_toStartOf="parent"
@@ -131,7 +134,8 @@ tools:context=".Fragments.Login.Login01Fragment">
         app:layout_constraintBottom_toTopOf="@id/tv_olvideMiContrasena"
 
         android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="5dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="10dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
         >
@@ -144,7 +148,6 @@ tools:context=".Fragments.Login.Login01Fragment">
 
             />
     </com.google.android.material.textfield.TextInputLayout>
-
     <TextView
         android:id="@+id/tv_olvideMiContrasena"
 
@@ -185,9 +188,8 @@ tools:context=".Fragments.Login.Login01Fragment">
         app:layout_constraintBottom_toTopOf="@id/tv_ingresarConOtros"
 
         android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="10dp"
+        android:layout_marginVertical="20dp"
         />
-
     <TextView
         android:id="@+id/tv_ingresarConOtros"
 
@@ -195,7 +197,7 @@ tools:context=".Fragments.Login.Login01Fragment">
         android:layout_height="wrap_content"
 
         android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="5dp"
+        android:layout_marginVertical="20dp"
         android:fontFamily="@font/rubik_variablefont_wght"
 
         android:gravity="center_horizontal"
@@ -203,7 +205,7 @@ tools:context=".Fragments.Login.Login01Fragment">
         android:textColor="#021638"
         android:textSize="16sp"
 
-        android:textStyle="bold|italic"
+        android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@id/cl_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -219,7 +221,6 @@ tools:context=".Fragments.Login.Login01Fragment">
         app:layout_constraintBottom_toTopOf="@id/tv_crearUnaCuenta"
 
         android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="5dp"
         >
 
         <ImageButton
@@ -253,7 +254,6 @@ tools:context=".Fragments.Login.Login01Fragment">
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
     <TextView
         android:id="@+id/tv_crearUnaCuenta"
 
@@ -261,7 +261,7 @@ tools:context=".Fragments.Login.Login01Fragment">
         android:layout_height="wrap_content"
 
         android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="5dp"
+        android:layout_marginVertical="20dp"
         android:fontFamily="@font/rubik_variablefont_wght"
         android:gravity="center_horizontal"
 
