--- a/app/src/main/res/layout/fragment_registro02.xml
+++ b/app/src/main/res/layout/fragment_registro02.xml
@@ -109,7 +109,7 @@
         android:fontFamily="@font/bebasneue_regular"
 
         android:gravity="center"
-        android:text="Ingresar"
+        android:text="Regresar"
         android:textSize="32dp"
 
         android:textStyle="bold"
