--- a/app/src/main/res/layout/fragment_registro03.xml
+++ b/app/src/main/res/layout/fragment_registro03.xml
@@ -28,54 +28,40 @@
         />
 
     <TextView
-        android:id="@+id/tv_ingresarCorreoElectronico"
+        android:id="@+id/tv_Texto1"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="100dp"
         android:fontFamily="@font/rubik_variablefont_wght"
 
         android:gravity="start"
-        android:text="Ingresar código de verificación"
+        android:text="Se enviara un correo para que verificar su cuenta"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_ValidarCorreo" />
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_correo"
+
+    <TextView
+        android:id="@+id/tv_texto2"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:textSize="16sp"
-        android:hint="Ingresar código de verificación"
-        android:gravity="start"
+        android:layout_marginHorizontal="20dp"
         android:fontFamily="@font/rubik_variablefont_wght"
 
-        app:startIconDrawable="@drawable/ic_baseline_mail_24"
-        android:inputType="textEmailAddress"
-
-        app:layout_constraintTop_toBottomOf="@id/tv_ingresarCorreoElectronico"
-        app:layout_constraintStart_toStartOf="parent"
+        android:gravity="start"
+        android:text="Necesitara realizar la verificación para poder iniciar sesión"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_Texto1" />
 
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="5dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
-        >
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/til_correoEditText"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/rubik_variablefont_wght"
-
-            />
-    </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_enviar"
 
@@ -88,7 +74,7 @@
         android:fontFamily="@font/bebasneue_regular"
         android:gravity="center"
 
-        android:text="Enviar"
+        android:text="Siguiente"
         android:textSize="32dp"
         android:textStyle="bold"
 
