--- a/app/src/main/res/layout/fragment_create_profile01.xml
+++ b/app/src/main/res/layout/fragment_create_profile01.xml
@@ -146,7 +146,7 @@
 
     <com.google.android.material.button.MaterialButtonToggleGroup
 
-        android:id="@+id/btn_sexo"
+        android:id="@+id/btngrpSex"
 
         app:singleSelection="true"
 
@@ -157,19 +157,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_sexo">
         <Button
-            android:id="@+id/btn_hombre"
+            android:id="@+id/btnHombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hombre"
             style="?attr/materialButtonOutlinedStyle"/>
         <Button
-            android:id="@+id/btn_mujer"
+            android:id="@+id/btnMujer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mujer"
             style="?attr/materialButtonOutlinedStyle"/>
         <Button
-            android:id="@+id/btn_otro"
+            android:id="@+id/btnOtro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Otro"
@@ -193,7 +193,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_sexo" />
+        app:layout_constraintTop_toBottomOf="@+id/btngrpSex" />
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_ocupacion"
 
