--- a/app/src/main/res/layout/activity_privacy_settings.xml
+++ b/app/src/main/res/layout/activity_privacy_settings.xml
@@ -7,6 +7,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fcwPrivacySettings"
+        android:name="pe.edu.ulima.pm.uset.Fragments.Settings.privacy.PrivacySettingsFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
