--- a/app/src/main/res/layout/fragment_login01.xml
+++ b/app/src/main/res/layout/fragment_login01.xml
@@ -26,7 +26,7 @@ tools:context=".Fragments.Login.Login01Fragment">
         android:gravity="center"
         android:text="Ingresar"
         android:textSize="64sp"
-        app:layout_constraintBottom_toTopOf="@id/tv_ingresarCorreoElectronico"
+        app:layout_constraintBottom_toTopOf="@id/tvChangeName"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@ tools:context=".Fragments.Login.Login01Fragment">
 
     <!--            CORREO ELECTRONICO              -->
     <TextView
-        android:id="@+id/tv_ingresarCorreoElectronico"
+        android:id="@+id/tvChangeName"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -51,13 +51,13 @@ tools:context=".Fragments.Login.Login01Fragment">
         android:text="Ingresar correo electronico"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/til_correo"
+        app:layout_constraintBottom_toTopOf="@id/tilChangeName"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_ingresar" />
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_correo"
+        android:id="@+id/tilChangeName"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -70,7 +70,7 @@ tools:context=".Fragments.Login.Login01Fragment">
         app:startIconDrawable="@drawable/ic_baseline_mail_24"
         android:inputType="textEmailAddress"
 
-        app:layout_constraintTop_toBottomOf="@id/tv_ingresarCorreoElectronico"
+        app:layout_constraintTop_toBottomOf="@id/tvChangeName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/tv_ingresarContrasena"
@@ -82,7 +82,7 @@ tools:context=".Fragments.Login.Login01Fragment">
         app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
         >
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/til_correoEditText"
+            android:id="@+id/tilCorreoEditText"
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -104,7 +104,7 @@ tools:context=".Fragments.Login.Login01Fragment">
         android:fontFamily="@font/rubik_variablefont_wght"
         android:gravity="start"
 
-        app:layout_constraintTop_toBottomOf="@id/til_correo"
+        app:layout_constraintTop_toBottomOf="@id/tilChangeName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/til_IngresarContrasenaLayout"
