--- a/app/src/main/res/layout/fragment_create_profile03.xml
+++ b/app/src/main/res/layout/fragment_create_profile03.xml
@@ -29,7 +29,7 @@
 
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_enviar"
+        android:id="@+id/btn_siguiente"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -66,7 +66,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_enviar"
+        app:layout_constraintTop_toBottomOf="@+id/btn_siguiente"
         app:layout_constraintVertical_bias="0.0"/>
 
 
