--- a/app/src/main/res/layout/fragment_registro02.xml
+++ b/app/src/main/res/layout/fragment_registro02.xml
@@ -77,7 +77,7 @@
             />
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_enviar"
+        android:id="@+id/btn_continuar"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -88,7 +88,7 @@
         android:fontFamily="@font/bebasneue_regular"
         android:gravity="center"
 
-        android:text="Enviar"
+        android:text="Continuar"
         android:textSize="32dp"
         android:textStyle="bold"
 
@@ -116,7 +116,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_enviar"
+        app:layout_constraintTop_toBottomOf="@+id/btn_continuar"
         app:layout_constraintVertical_bias="0.0"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
