--- a/app/src/main/res/layout/sidemenu_head_username.xml
+++ b/app/src/main/res/layout/sidemenu_head_username.xml
@@ -16,7 +16,7 @@
         app:srcCompat="@drawable/download" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvUsernameMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
