--- a/app/src/main/res/layout/activity_guardar_foto.xml
+++ b/app/src/main/res/layout/activity_guardar_foto.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Fragments.CreateProfile.CreateProfile03Fragment">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tv_ValidarCorreo"
@@ -36,6 +35,7 @@
 
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/bebasneue_regular"
         android:gravity="center"
 
@@ -46,7 +46,28 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_foto"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_omitir"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginBottom="56dp"
+        android:fontFamily="@font/bebasneue_regular"
+
+        android:gravity="center"
+        android:text="Omitir"
+        android:textSize="32dp"
+
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_foto"
         app:layout_constraintVertical_bias="0.0"/>
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_regresar"
@@ -56,29 +77,28 @@
 
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp"
+        android:layout_marginBottom="56dp"
         android:fontFamily="@font/bebasneue_regular"
-        android:gravity="center"
 
+        android:gravity="center"
         android:text="Regresar"
         android:textSize="32dp"
-        android:textStyle="bold"
 
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_foto"
+        app:layout_constraintTop_toBottomOf="@+id/btn_omitir"
         app:layout_constraintVertical_bias="0.0"/>
-
 
     <ImageView
         android:id="@+id/iv_foto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/download"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btn_foto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_ValidarCorreo"
-        app:layout_constraintVertical_bias="0.15" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_ValidarCorreo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
