Login y Registro finalizados

--- a/app/src/main/res/layout/fragment_registro04.xml
+++ b/app/src/main/res/layout/fragment_registro04.xml
@@ -76,7 +76,7 @@
         android:fontFamily="@font/bebasneue_regular"
         android:gravity="center"
 
-        android:text="Siguiente"
+        android:text="Verificado!"
         android:textSize="32dp"
         android:textStyle="bold"
 
