REGISTRO CON FOTO :3

--- a/app/src/main/res/layout/activity_guardar_foto.xml
+++ b/app/src/main/res/layout/activity_guardar_foto.xml
@@ -81,7 +81,7 @@
         android:fontFamily="@font/bebasneue_regular"
 
         android:gravity="center"
-        android:text="Regresar"
+        android:text="Confirmar"
         android:textSize="32dp"
 
         android:textStyle="bold"
