--- a/app/src/main/res/layout/toolbar_login.xml
+++ b/app/src/main/res/layout/toolbar_login.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/mt_toolbarlogin"
     android:background="@color/main_orange"
-    android:textAlignment="center"
+    android:gravity="center"
     app:titleTextColor="@color/white">
 
 </com.google.android.material.appbar.MaterialToolbar>
